Added ability to search users. Usermodel, adapter, and new activities.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,13 @@
             android:name=".MessageActivity"
             android:exported="false" />
         <activity
-            android:name=".ChatActivity"
+            android:name=".CreateChat"
             android:exported="false" />
         <activity
-            android:name=".testActivity"
+            android:name=".HomeScreen"
+            android:exported="false" />
+        <activity
+            android:name=".ChatActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
