added mass message

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.GuardianMessenger"
         tools:targetApi="31">
         <activity
+            android:name=".MassMessage"
+            android:exported="false" />
+        <activity
             android:name=".ManageAccountActivity"
             android:exported="false" />
         <activity
@@ -26,8 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".ChatActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
