--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".RequestChatLogActivity"
             android:exported="false" />
         <activity
-            android:name=".MassMessage"
+            android:name=".MassMessageActivity"
             android:exported="false" />
         <activity
             android:name=".ManageAccountActivity"
@@ -25,10 +25,10 @@
             android:name=".MessageActivity"
             android:exported="false" />
         <activity
-            android:name=".CreateChat"
+            android:name=".CreateChatActivity"
             android:exported="false" />
         <activity
-            android:name=".HomeScreen"
+            android:name=".HomeScreenActivity"
             android:exported="false" />
         <activity
             android:name=".ChatActivity"
