--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.GuardianMessenger"
         tools:targetApi="31">
         <activity
-            android:name=".OutreachActivity"
+            android:name=".outreach.OutreachActivity"
             android:exported="false" />
         <activity
             android:name=".RequestChatLogActivity"
